objects/tffa__PartyAddressXref__c.object
<CustomObject>
    <description>Association table between Party and Address . This supports capture of multiple types and also periodAtAddress.
This creates an address book of the party</description>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <description>The address lookup @managed</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Parties</relationshipLabel>
        <relationshipName>PartyAddresses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__HousingStatus__c</fullName>
        <description>Type that specifies the basis on which the borrower lives/lived at the indicated address.</description>
        <label>Housing status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HousingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyPayment__c</fullName>
        <description>The amount paid by the applicant towards his housing expenses</description>
        <label>MonthlyPayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>The party which owns the address.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>AddressXrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PeriodInMonths__c</fullName>
        <description>The period in months the party was at this address</description>
        <label>Period At this Address In Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PeriodInYears__c</fullName>
        <description>The period in years the party was at this address</description>
        <label>Period At this Address In Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the current address record is the preferred address for the party</description>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Prefilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the data was prefilled using either scanning of photo ID or other mechanisms</description>
        <label>Prefilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Indicates address type. Classification of the address with respect to owning entity type. 

For individual, values are - HOME,MAILING,PERMANENT
For company, values are - REGISTERED,MAILING</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VerificationMethod__c</fullName>
        <description>Address verification method, usually Manual or KYC</description>
        <label>Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressVerificationMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VerifiedOn__c</fullName>
        <description>The date and time of verification of the address.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verified on</label>
        <type>DateTime</type>
    </fields>
    <label>Party Address Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartyAddresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>